[Devtools] Fixed devtools altering srcset image after close

This patch fixes a bug where devtools was causing blink to load images
from into memory cache when devtools had overriden the scaleFactor
it would parse srcset and possibly choose different image until cache
was evicted.

R=dgozman
BUG=602957

Review-Url: https://codereview.chromium.org/2570733002
Cr-Commit-Position: refs/heads/master@{#439301}