third_party/WebKit/Source/web/DevToolsEmulator.cpp
@@ -5,6 +5,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "web/DevToolsEmulator.h"
 
+#include "core/fetch/MemoryCache.h"
 #include "core/frame/FrameHost.h"
 #include "core/frame/FrameView.h"
 #include "core/frame/Settings.h"
@@ -201,6 +202,9 @@ void DevToolsEmulator::enableDeviceEmulation(
       m_emulationParams.scale == params.scale) {
     return;
   }
+  if (m_emulationParams.deviceScaleFactor != params.deviceScaleFactor ||
+      !m_deviceMetricsEnabled)
+    memoryCache()->evictResources();
 
   m_emulationParams = params;
 
@@ -236,6 +240,7 @@ void DevToolsEmulator::disableDeviceEmulation() {
   if (!m_deviceMetricsEnabled)
     return;
 
+  memoryCache()->evictResources();
   m_deviceMetricsEnabled = false;
   m_webViewImpl->setBackgroundColorOverride(Color::transparent);
   m_webViewImpl->page()->settings().setDeviceScaleAdjustment(
